--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     </header>
 
     <main class="container my-4">
+        <div class="card bg-dark text-white p-3 mb-4">
+            <div class="d-grid">
+                <button id="quick-record-btn" class="btn btn-lg"><span>Quick Record</span><i class="fas fa-video"></i></button>
+            </div>
+        </div>
+
         <div id="shot-list-view" class="card bg-dark text-white p-3">
             <h2 class="card-title">Your Shots</h2>
             <div id="shot-list-container" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3"></div>
